# my_blog

./: -  .gitignore  404.html  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
.github/workflows/: deploy.yml
about/: index.html
assets/: 404.html  my_blog-dxh12446f8b30ad1ac4.js  my_blog-dxh5e1df953effaef3.js  my_blog-dxh5f29a1623df6042.js  my_blog-dxh6d4fe35c451b47c.js  my_blog-dxh705953f9571773d7.js  my_blog-dxh7544667e5decd19.js  my_blog-dxh7f999f7ec15c7a4b.js  my_blog-dxhe46deeac32c56d2.js  my_blog-dxhee4f895510827d92.js  my_blog-dxhfbf18b6993e6b622.js  my_blog_bg-dxh266776b26786e7b.wasm  my_blog_bg-dxh2bfc8c4ca2b9b912.wasm  my_blog_bg-dxh2d8546432ddf1462.wasm  my_blog_bg-dxh4796fec5294df9d1.wasm  my_blog_bg-dxh4fc6ec96c6219812.wasm  my_blog_bg-dxh932dafb6d933942e.wasm  my_blog_bg-dxh9dcd255f38464425.wasm  my_blog_bg-dxhae5e452c485b5e13.wasm  my_blog_bg-dxhc6ae9267baee576b.wasm  my_blog_bg-dxhd55f23ee5562719.wasm  tailwind-dxh425c712c3aab6bec.css  tailwind-dxh4b5ab6c13f49869.css  tailwind-dxh97529bcc809945d9.css  tailwind-dxh9b447c5ca31f7afe.css  tailwind-dxhb16eac3f71c9788.css  tailwind.css
blog/: index.html
blog/post-1/: index.html
contact/: index.html
content/: projects_index.json
posts/: hosting-dioxus-on-github-pages.md  post-1.md  post-2.md
projects/: crabby-sync.md  ferros.md  github_page_using_dioxus.md  index.html  wasm-viz.md
projects/wasm/: index.html
src/: main.rs  posts.rs  projects_data.rs
src/components/: blog.rs  call_to_action.rs  (+5 more)
wasm/: my_blog.js
(+17 files in other folders)
